fixing the dark mode comment

--- a/src/styles/global.less
+++ b/src/styles/global.less
@@ -59,8 +59,8 @@
   }
 }
 
-body.dark {
+html.dark {
   .comment {
-    background: #42445A;
+    background: #42445A !important;
   }
 }
